--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,20 @@ main:
   - name: Home
     url: /
   - name: About
-    url: {{ site.baseurl }}/about
+    url: /about
   - name: Services
-    url: {{ site.baseurl }}/services
+    url: /services
   - name: Contact
-    url: {{ site.baseurl }}/contact
+    url: /contact
 
 ########## footer menu ###############
 footer:
   - name: Services
-    url: {{ site.baseurl }}/services
+    url: /services
   - name: About
-    url: {{ site.baseurl }}/about
+    url: /about
   - name: Contact
-    url: {{ site.baseurl }}/contact
+    url: /contact
 
 ############## Bottom menu ###############
 bottom:
